--- a/main.css
+++ b/main.css
@@ -1,7 +1,7 @@
 :root {
-    --bg-colour1: #db9eff;    
-    --bg-colour2: #9fd4ff;
-    --accent-colour1: #68c8f9
+    --bg-colour1: #db9eff; /*light purple*/    
+    --bg-colour2: #9fd4ff; /*light blue*/
+    --accent-colour1: #68c8f9;
     --accent-colour1-dark: #52aee5;
     --accent-colour2: #c38ff5;
     --accent-colour2-dark: #a568d0;
@@ -28,10 +28,12 @@ body {
     width: 70vw;
     height: 50vh;
     margin: 0 auto;
+    padding: 3%;
     background-color: rgba(255, 255, 255, 0.35);
-    border: 3px solid var(--accent-colour1);
-    border-radius: 2%;
-    transitition: background-color linear 1s;
+    border: 5px solid var(--accent-colour2-dark);
+    box-shadow: 5px 5px 25px rgba(0, 0, 0, 0.25);
+    border-radius: 5%;
+    transition: background-color linear 1s;
 }
 #create-test:hover {
     background-color: rgba(255, 255, 255, 0.5);
@@ -41,7 +43,7 @@ body {
     padding: 2%;
     margin: 3%;
     background-color: var(--accent-colour1);
-    transitition: background-color linear 1s;
+    transition: background-color linear 1s;
 }
 .button:hover {
     background-color: var(--accent-colour1-dark);
