--- a/main.css
+++ b/main.css
@@ -65,7 +65,7 @@ p {
     font-size: 1.6rem;
     font-family: var(--font2);
     color: var(--txt-colour-light);
-    text-shadow: 3px 3px var(--txt-colour-dark);
+    text-shadow: 1.5px 1.5px var(--txt-colour-dark);
     text-align: center;
     vertical-align: middle;
     cursor: pointer;
@@ -74,9 +74,9 @@ p {
     border-radius: 10px;
     transition: linear 0.25s;
 }
-.button:hover {
+.button:hover, .button.disabled {
     color: var(--txt-colour-dark);
-    text-shadow: 3px 3px var(--txt-colour-light);
+    text-shadow: 1.5px 1.5px var(--txt-colour-light);
     background-color: var(--accent-colour1-dark);
     border: 3px solid var(--accent-colour1);
 }
@@ -142,7 +142,6 @@ form#premade * {
 }
 form#premade #test-selected {
     width: 100%;
-    height: 100%;
     border-bottom: 2px solid var(--txt-colour-dark);
 }
 
@@ -163,7 +162,6 @@ form#premade #test-selected {
 form#test {
     max-height: 65vh;
     margin-top: 5vh;
-    padding: 5%;
     overflow-y: scroll;
     background-color: rgba(255, 255, 255, 0.35);
     border: 5px solid var(--accent-colour1-dark);
@@ -176,12 +174,43 @@ form#test:hover {
 }
 
 .question {
+    padding: 5%;
     text-align: left;
     display: flex;
     flex-wrap: wrap;
 }
 .question:not(:last-child) {
-    margin-bottom: 35px;
+    padding-bottom: 35px;
+}
+.question.unanswered h3 {
+    color: #cc0000;
+}
+.question.correct {
+    background-color: rgba(92, 214, 92, 0.25);
+}
+.question.correct span.status {
+    width: 100%;
+    padding: 5%;
+    margin-bottom: 10px;
+    font-size: 1.5rem;
+    font-family: var(--font1);
+    color: #004d00;
+    background-color: rgba(92, 214, 92, 0.5);
+}
+.question.incorrect {
+    background-color: rgba(255, 128, 128, 0.25);
+}
+.question.incorrect span.status {
+    width: 100%;
+    padding: 5%;
+    margin-bottom: 10px;
+    font-size: 1.5rem;
+    font-family: var(--font1);
+    color: #990000;
+    background-color: rgba(255, 128, 128, 0.5);
+}
+.question.correct .tooltip, .question.incorrect .tooltip {
+    display: none;
 }
 .question h3 {
     display: inline-block;
