--- a/main.css
+++ b/main.css
@@ -58,11 +58,10 @@ p {
 }
 hr {
     margin: 2% 0;
-    border-bottom: 2px solid var(--accent-colour2-dark);
+    border-left: 2px solid var(--accent-colour2-dark);
 }
 .button {
-    width: 15%;
-    min-width: 100px;
+    min-width: 25%;
     height: 7vh;
     min-height: 60px;
     padding: 2%;
@@ -86,7 +85,7 @@ hr {
     border: 3px solid var(--accent-colour1);
 }
 .dropbtn {
-    width: 50%;
+    width: 100%;
     height: 7vh;
     min-height: 60px;
     padding: 2%;
@@ -131,7 +130,7 @@ hr {
     opacity: 1;
 }
 input[type="number"] {
-    width: 50%;
+    width: 100%;
     height: 7vh;
     min-height: 60px;
     padding: 2%;
@@ -144,13 +143,16 @@ input[type="number"] {
     border: 3px solid var(--accent-colour2-dark);
     border-radius: 10px;
 }
+input::placeholder {
+    color: var(--txt-colour-dark);
+}
 
 
 #create-test {
     width: 70vw;
     height: 75vh;
     margin: 0 auto;
-    padding: 3%;
+    display: flex;
     background-color: rgba(255, 255, 255, 0.35);
     border: 5px solid var(--accent-colour2-dark);
     box-shadow: 5px 5px 25px rgba(0, 0, 0, 0.15);
@@ -160,12 +162,16 @@ input[type="number"] {
 #create-test:hover {
     background-color: rgba(255, 255, 255, 0.5);
 }
-form#premade * {
+form#premade *, form[name=user-test] * {
     display: inline-block;
 }
 form#premade #test-selected {
     width: 100%;
     border-bottom: 2px solid var(--txt-colour-dark);
+}
+form[name=user-test], form#premade {
+    width: 50%;
+    padding: 3%;
 }
 
 
@@ -239,7 +245,7 @@ form#test:hover {
     display: none;
 }
 .question h3 {
-    display: inline-block;
+    width: 100%;
     position: relative;
     cursor: help;
 }
@@ -277,7 +283,13 @@ input[type=radio] {
     padding: 5%;
     float: left;
 }
+#test-right #score {
+    height: 50vh;
+    padding: 30% 0;
+    font-size: 7rem;
+}
 #test-right .button {
-    min-width: 200px;
+    width: 43%;
     min-height: 50px;
+    display: inline-block;
 }
