--- a/main.css
+++ b/main.css
@@ -68,6 +68,7 @@ hr {
     margin: 3%;
     font-size: 1.6rem;
     font-family: var(--font2);
+    line-height: 5vh;
     color: var(--txt-colour-light);
     text-shadow: 1.5px 1.5px var(--txt-colour-dark);
     text-align: center;
@@ -90,7 +91,7 @@ hr {
     min-height: 60px;
     padding: 2%;
     margin: 3%;
-    padding: 2%;
+    line-height: 5vh;
     position: relative;
     background-color: var(--accent-colour2);
     border: 3px solid var(--accent-colour2-dark);
@@ -148,6 +149,40 @@ input::placeholder {
 }
 
 
+#modal {
+    width: 100%;
+    height: 100%;
+    display: none;
+    position: fixed;
+    right: 0;
+    bottom: 0;
+    z-index: 1;
+    text-align: center;
+    background-color: rgba(0, 0, 0, 0.35);
+}
+#modal-content {
+    width: 50%;
+    height: 30%;
+    position: absolute;
+    top:25%;
+    left: 25%;
+    transform: translate(-50%; -50%);
+}
+.spinner {
+    width: 250px;
+    height: 250px;
+    margin: 5% auto;
+    border: 20px solid var(--accent-colour1-dark);
+    border-bottom: 20px solid var(--accent-colour1);
+    border-radius: 50%;
+    animation: spin 3s linear infinite;
+}
+@keyframes spin {
+    0% {transform: rotate(0deg);}
+    100% {transform: rotate(360deg);}
+}
+
+
 #create-test {
     width: 70vw;
     height: 75vh;
@@ -175,12 +210,12 @@ form[name=user-test], form#premade {
 }
 
 
+
 #play-test {
     width: 100vw;
     height: 100vh;
     display: none;
 }
-
 
 #test-left {
     width: 65%;
