--- a/main.css
+++ b/main.css
@@ -197,14 +197,14 @@ input::placeholder {
 #create-test:hover {
     background-color: rgba(255, 255, 255, 0.5);
 }
-form#premade *, form[name=user-test] * {
+form#premade *, form#user-test * {
     display: inline-block;
 }
 form#premade #test-selected {
     width: 100%;
     border-bottom: 2px solid var(--txt-colour-dark);
 }
-form[name=user-test], form#premade {
+form#user-test, form#premade {
     width: 50%;
     padding: 3%;
 }
