--- a/main.css
+++ b/main.css
@@ -124,7 +124,6 @@ hr {
 }
 .dropdown h3:hover, .dropdown h3.selected {
     background-color: var(--accent-colour2);
-    
 }
 .dropbtn:hover .dropdown {
     visibility: visible;
@@ -196,6 +195,16 @@ input::placeholder {
 }
 #create-test:hover {
     background-color: rgba(255, 255, 255, 0.5);
+}
+.title {
+    width: 100%;
+    position: fixed;
+    top: 4vh;
+    left: 0;
+    font-size: 10rem;
+    font-variant-caps: all-small-caps;
+    word-wrap: break-word;
+    line-height: 5rem;
 }
 form#premade *, form#user-test * {
     display: inline-block;
